tests/kubebench/overlays/istio/test_data/expected/apiextensions.k8s.io_v1beta1_customresourcedefinition_kubebenchjobs.kubeflow.org.yaml
apiVersion: apiextensions.k8s.io/v1beta1
kind: CustomResourceDefinition
metadata:
  labels:
    kustomize.component: kubebench
  name: kubebenchjobs.kubeflow.org
spec:
  group: kubeflow.org
  names:
    kind: KubebenchJob
    plural: kubebenchjobs
  scope: Namespaced
  version: v1alpha2
