tests/kubebench/overlays/istio/test_data/expected/default_networking.istio.io_v1alpha3_virtualservice_kubebench-dashboard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubebench-dashboard
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /dashboard/
    rewrite:
      uri: /dashboard/
    route:
    - destination:
        host: kubebench-dashboard.$(namespace).svc.cluster.local
        port:
          number: 80
