tests/kubebench/overlays/istio/test_data/expected/kubeflow_~g_v1_configmap_parameters-mdbt8k6574.yaml
apiVersion: v1
data:
  clusterDomain: cluster.local
  namespace: ""
kind: ConfigMap
metadata:
  labels:
    kustomize.component: kubebench
  name: parameters-mdbt8k6574
  namespace: kubeflow
