tests/kubebench/overlays/istio/test_data/expected/kubeflow_~g_v1_serviceaccount_kubebench-operator.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: kubebench-operator
    kustomize.component: kubebench
  name: kubebench-operator
  namespace: kubeflow
